<resources>
    <string name="app_name">Community Census</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="FACEBOOK_APP_ID">508500459526780</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">3c7acd67e7cd59879f097b785c2f2d39</string>

    <string name="action_settings">Settings</string>
    <string name="login_digits_label">Login With Mobile</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="txt_registered_members">Registerd Members</string>
    <string name="txt_family_members">Family Members</string>
    <string name="txt_enrolled_pincode">Enrolled By Pincode</string>
    <string name="txt_supervisor">Supervisors</string>
    <string name="lbl_dont_have_account">DON\'T HAVE ACCOUNT?</string>
    <string name="lbl_sign_up">I\'m New</string>
    <string name="lbl_add_member">Add Member</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_supervisor">Supervisor</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_add_supervisor">Add Supervisor</string>
    <string name="title_activity_add_member">Add Member</string>

    <string name="title_activity_list_family_head">ListFamilyHead</string>
    <string name="lbl_member">Member</string>
    <string name="txt_family_head">Is Family Head ?</string>
    <string name="txt_reports">Reports</string>
    <string name="help">Help</string>
    <string name="string_help_text">The permission is missing.\n\nTo grant this permission click on Settings, then Permissions and turn the permission on.\n\nThen click back twice to return to the app</string>
    <string name="quit">Close</string>
    <string name="settings">Settings</string>
    <string name="txt_select_family_head">Select Family Head</string>
    <string name="txt_first_name">First Name</string>
    <string name="txt_last_name">Last Name</string>
    <string name="txtGender">Gender</string>
    <string name="txt_date_of_birth">Date Of Birth</string>
    <string name="txt_mobile_no">Phone Number</string>
    <string name="txt_email">Email ID</string>
    <string name="txt_address">Address</string>
    <string name="txt_zipcode">Zipcode</string>
    <string name="no_network">Check your internet connection and try again.</string>
    <string name="lbl_registration">Registration</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_add_supervisor">Add Supervisor</string>
    <string name="lbl_Add">Add</string>
    <string name="title_activity_supervisors">Supervisors</string>
    <string name="title_activity_view_member">View Member</string>
    <string name="relation_spinner_hint">Please Select Relation</string>
    <string name="search_spinner_hint">Filter</string>
    <string name="txt_state">State</string>
    <string name="txt_city">City</string>
    <string name="no_selection">No data available</string>
    <string name="title_activity_add_family_members">AddFamilyMembers</string>
    <string name="title_activity_family_head_list">Family Heads</string>
    <string name="title_activity_family_members">Family Members</string>
    <string name="txt_aadhaar">Aadhaar Number</string>
    <string name="lbl_update">Update</string>
    <string name="title_activity_broadcast">Broadcast</string>
    <string name="title_activity_add_family_member">Add Member</string>
    <string name="title_activity_supervisor_detail">Supervisor Detail</string>
    <string name="what_is_cc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="title_activity_reports">Reports</string>
    <string name="title_activity_telegram_broadcast">Telegram</string>
    <string name="title_activity_maps">Map</string>
    <string name="showcase_supervisor_title">Supervisor Details</string>
    <string name="showcase_supervisor_message">Supervisor tab, will get you all the supervisors registered/added in the community census application with image, name, phone number and number of community members supervisor added respectively. please click on the list item to see the details of the supervisor.</string>
    <string name="showcase_fh_title">Family Heads</string>
    <string name="showcase_fh_message">you can see all the family heads of the community, each item has Profile image of the family head, Name, Phone Number and the family size. click to see the family details.</string>
    <string name="showcase_reports_title">Community App Reports</string>
    <string name="showcase_reports_message">Show the detailed reports of the supervisors,also you can find the monthly and weekly report.</string>
    <string name="showcase_add_member_message">You can add a Family Head/Member details for the community</string>
    <string name="showcase_add_supervisor_message">You can add a Supervisor to survey the community</string>
    <string name="lbl_admin_login"><u>Admin login</u></string>
    <string name="lbl_member_login_text"><u>Member login</u></string>
    <string name="lbl_supervisor_login_text"><u>Supervisor login</u></string>
    <string name="lbl_member_login"><u>If you are a member/supervisor click here to login.</u></string>
    <string name="lbl_all_fields">All flieds are compulsory, please fill in the form to add the member.</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_send_sms_info">your message will be broadcast to all the members of the community App via SMS</string>
    <string name="lbl_email_info">your message will be mailed for the community census application members via email.</string>
    <string name="lbl_logout">Are you sure you want to logout ?</string>
    <string name="lbl_edit_fields">Edit your Profile. All fields are mandatory.</string>

    <string name="sign_out">Sign Out</string>
    <string name="hint_phone_number">Enter Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="notification">your offline data has been synced sucessfully.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
